--- a/style.css
+++ b/style.css
@@ -36,12 +36,18 @@
 /* All Button Color class */
 .colorpro{
     background: linear-gradient(45deg, #F7E93F, #FB09B4, #9100F8);
-    padding: 12px 16px;
+    padding: 10px 16px;
     color: #fff;
     font-size: 16px;
     font-weight: 500;
     border: none;
     border-radius: 25px;
+    
+}
+
+.colorpro:hover{
+    background: linear-gradient(-45deg, #F7E93F, #FB09B4, #9100F8);
+    cursor: pointer;
 }
  /* .btn{
 
@@ -56,11 +62,12 @@
 #hero-section{
     width: 100%;
     max-width: 1280px;
-    height: 90vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    gap: 50px;
+    /* flex-direction: column; */
     padding: 100px;
     margin: 0 auto;
     background-color: #6e4d99;
@@ -69,6 +76,7 @@
     background-size: cover;
     
 }
+
 #hero-section .hero-bg{
     display: flex;
     flex-direction: column;
@@ -76,37 +84,44 @@
     align-items: center;
 }
 
-#hero-section .hero-bg .circlepro{
-    width: 100%;
+#hero-section .circlepro img{
+    width: 280px;
     height: auto;
     position: relative;
     
-
 }
-#hero-section .hero-bg .microphone{
-    width: 100%;
-    height: auto;
+
+#hero-section .hero-circle img{
     position: absolute;
-    top: 90px;
-    left: 110px;
-    
+    width: 9%;
+    top: 32%;
+    left: 45.5%;
 }
 
+#hero-section h2{
+    color: #fff;
+    font-size: 40px;
+    padding: 20px 0px 0;
+}
 
+#hero-section p{
+    font-size: 16px;
+    color: #fff;
+    font-weight: 300;
+    padding: 15px 0;
+}
+#hero-section .hero-btn .Subscribe{
+    background-color: rgba(255, 0, 0, 0);
+    padding: 10px 16px;
+    color: #00FF88;
+    font-size: 16px;
+    font-weight: 400;
+    border: 1px solid #00FF88;
+    border-radius: 25px;
+}
 
-/* #hero-section .circle img{
-    max-width: 50%;
-    height: auto;
-
-} */
-
- /* #hero-section .herocircle img{
-    
-    max-width: 50%;
-    height: auto;
-    align-content: center;
-
-} */
+#about{
+}
 
 
 
