about section update

--- a/style.css
+++ b/style.css
@@ -121,8 +121,120 @@
 }
 
 #about{
+     width: 100%;
+    max-width: 1280px;
+    /* height: 90vh; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    /* flex-direction: column; */
+    padding: 120px 100px;
+    margin: 0 auto;
+    background-color: #1A0B2E;
+}
+
+#about .about-heading h2{
+    text-align: center;
+    color: #fff;
+    font-size: 48px;
+    
+}
+#about .about-heading p{
+    text-align: center;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 25px;
+    padding: 20px 0;
+}
+
+#about .earning{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 100px;
+}
+
+.earning h2{
+    color: #00FF88;
+    font-size: 35px;
+    font-weight: 900;
+    text-align: center;
+}
+.earning p{
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    font-weight: 300;
+}
+
+#box-container{
+    width: 100%;
+    max-width: 1280px;
+    padding: 100px;
+    background-color: #230E3D;
+
+}
+#box-container .heading{
+    text-align: center;
+    font-size:  42px;
+    font-weight: 700;
+    color: #fff;
+    padding-bottom: 50px;
+}
+.grid-section{
+    width: 100%;
+    max-width: 1280px;
+    display: grid;
+    gap: 20px;
+    
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 220px);
+}
+
+.box{
+    /* border: 2px solid sandybrown ; */
+    background-color: #351165b0;
+    color: #fff;
+    border-radius: 25px;
+    padding: 30px;
+    box-sizing: border-box;
+}
+.box h2{
+    padding-top: 10px ;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.box p{
+    font-size: 16px;
+    font-weight: 200;
+    padding: 15px 0;
+    
+}
+
+#sidebar{
+    grid-row: span 2;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    
+}
+
+#topbar{
+    grid-column: span 2;
+    display: grid;
+    justify-content: start;
+    align-content: center;
 }
 
 
 
 
+
+@media screen and (max-widht:576px) {
+    #menu nav li{
+    display: none;
+    }
+}
