--- a/style.css
+++ b/style.css
@@ -86,18 +86,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 100px;
+    padding: 120px 100px;
     margin: 0 auto;
     background-color: #6e4d99;
     background-image: url(images/hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     
-
 }
 
 #hero-section .circlepro img {
-    width: 300px;
+    width: 280px;
     height: auto;
     align-items: center;
     position: relative;
@@ -106,44 +105,11 @@
 
 #hero-section .hero-circle img {
     position: absolute;
-    width: 10%;
-    top: 30%;
-    left: 45%;
+    width: 8%;
+    top: 33%;
+    left: 46%;
 }
 
-/* .techwave{
-    width: 100%;
-    max-width: 1280px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 50px 0;
-    background-color: #1A0B2E;
-}
-
-.techwave .Subscribe{
-    background-color: rgba(255, 0, 0, 0);
-    padding: 10px 16px;
-    color: #00FF88;
-    font-size: 16px;
-    font-weight: 400;
-    border: 1px solid #00FF88;
-    border-radius: 25px;
-}
-
-
-.techwave  h2{
-    color: #fff;
-    font-size: 40px;
-    padding: 20px 0px;
-}
-.techwave  p{
-    font-size: 16px;
-    color: #fff;
-    font-weight: 300;
-    padding: 15px 0;
-} */
 
 #hero-section h2 {
     color: #fff;
@@ -153,7 +119,7 @@
 
 #hero-section p {
     font-size: 16px;
-    color: #fff;
+    color: rgb(161, 161, 161);
     font-weight: 300;
     padding: 15px 0;
     text-align: center;
@@ -179,7 +145,6 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
-    /* flex-direction: column; */
     padding: 120px 100px;
     margin: 0 auto;
     background-color: #1A0B2E;
@@ -202,9 +167,10 @@
 }
 
 #about .earning {
-    display: flex;
-    justify-content: space-evenly;
-    gap: 100px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    /* justify-content: space-evenly; */
+    gap: 80px;
 }
 
 .earning h2 {
@@ -215,10 +181,12 @@
 }
 
 .earning p {
-    color: #fff;
     font-size: 16px;
+    color: rgb(161, 161, 161);
     text-align: center;
     font-weight: 300;
+    padding: 20px 0;
+    text-transform: uppercase;
 }
 
 #box-container {
@@ -242,7 +210,6 @@
     max-width: 1280px;
     display: grid;
     gap: 20px;
-
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 220px);
 }
@@ -283,6 +250,50 @@
     justify-content: start;
     align-content: center;
 }
+
+
+#vedio-section{
+    width: 100%;
+    max-width: 1280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 120px 100px;
+    background-color: #1A0B2E;
+}
+
+#vedio-section .all-vedio{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+    
+}
+
+#vedio-section .vedio-box{
+    background-color: rgb(177, 51, 51) ;
+    width: 350px;
+    height: 400px;
+    border-radius: 25px;
+    /* padding: 20px; */
+}
+
+#vedio-section .vedio-box iframe{
+    border-radius: 25px 25px 0px 0px;
+    width: 350px;
+    height: 190px ;
+}
+
+#vedio-section .vedio-box .v-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+
 
 
 
@@ -328,7 +339,44 @@
     left: 46%;
     }
 
-    
+    #about{
+        padding: 130px 10px;
+    }
 
+     #about .about-heading h2{
+        font-size: 35px;
+     }
+     #about .about-heading p{
+        font-size: 14px;
+        color: rgb(161, 161, 161);
+     }
+
+    #about .earning {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    }
+
+    #box-container{
+        padding: 100px 10px;
+    }
+
+    .grid-section {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(1, 1fr);
+    }
+    .box{
+        padding: 20px;
+    }
+    #sidebar {
+    grid-row: span 1;
+    display: grid;
+    justify-content: center;
+    align-content: start;
+    }
+    #topbar{
+        grid-row: span 1;
+    }
 
 }
