--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@
 #hero-section h2 {
     color: #fff;
     font-size: 40px;
-    padding: 20px 0px 0;
+    padding: 20px 0px;
 }
 
 #hero-section p {
@@ -150,7 +150,7 @@
     background-color: #1A0B2E;
 }
 
-#about .about-heading h2 {
+#about .about-heading h2{
     text-align: center;
     color: #fff;
     font-size: 48px;
@@ -273,7 +273,7 @@
 }
 
 #vedio-section .vedio-box{
-    background-color: rgb(177, 51, 51) ;
+    background-color: #250D44;
     width: 350px;
     height: 400px;
     border-radius: 25px;
@@ -283,7 +283,7 @@
 #vedio-section .vedio-box iframe{
     border-radius: 25px 25px 0px 0px;
     width: 350px;
-    height: 190px ;
+    height: 195px;
 }
 
 #vedio-section .vedio-box .v-box{
@@ -293,6 +293,28 @@
     padding: 20px;
 }
 
+#vedio-section .Featured-heading{
+    font-size: 40px;
+    font-family: 700;
+    color: #fff;
+    padding-bottom: 35px ;
+}
+
+#vedio-section .vedio-box h2{
+    color: #fff;
+    font-size: 25px;
+}
+#vedio-section .vedio-box p{
+    color: #c4c4c4;
+    font-weight: 300;
+    font-size: 16px;
+    padding: 15px 0;
+}
+#vedio-section .vedio-box h5{
+    color: #00FF88;
+    font-weight: 300;
+    font-size: 16px;
+}
 
 
 
@@ -377,6 +399,29 @@
     }
     #topbar{
         grid-row: span 1;
+    }
+
+    #vedio-section{
+    padding: 120px 10px;
+ 
+}
+
+    #vedio-section .all-vedio{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 500px;
+        padding: 10px;
+    }
+    #vedio-section .Featured-heading{
+        font-size: 25px;
+    }
+
+    #vedio-section .vedio-box{
+        width: 100%;
+    }
+    #vedio-section .vedio-box iframe{
+        width: 100%;
     }
 
 }
