--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
-    padding: 20px 100px;
+    padding: 20px 100px 100px;
     background-color: #1A0B2E;
 }
 
@@ -372,6 +372,51 @@
 }
 
 
+#footer-section{
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 100px;
+    background: url(images/footer-bg.png);
+    background-position: center;
+    background-size: cover;
+}
+
+#footer-section .footer-box{
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-box h2 {
+    font-size: 35px;
+    color: #fff;
+    padding: 0;
+    margin: 0;
+}
+.footer-box .h-with{
+    background: linear-gradient(45deg, #F7E93F, #FB09B4, #9100F8);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.footer-box .footer-socile {
+    display: flex;
+    gap: 20px;
+}
+
+.footer-box .footer-socile button{
+    border: none;
+    /* padding: 10px 60px; */
+    background-color: #9100f800;
+    color: #c6c6c6;
+}
+
+.footer-box p{
+    color: #c6c6c6;
+}
 
 
 
