--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@
     width: 100%;
     max-width: 1280px;
     padding: 100px;
+    margin: 0 auto;
     background-color: #230E3D;
 
 }
@@ -426,6 +427,8 @@
 
 
 
+
+
 @media screen and (max-width:576px) {
     #menu, #hero-section {
         padding: 10px;
@@ -462,7 +465,7 @@
     #hero-section .hero-circle img {
     position: absolute;
     width: 8%;
-    top: 18%;
+    top: 15%;
     left: 46%;
     }
 
